Added Transactional Command Discard Exec and Multi Command